[gd_scene load_steps=9 format=3 uid="uid://bv0qun4gy0t1u"]

[ext_resource type="Script" path="res://scene/flappy_bird/game.gd" id="1_y1a7j"]
[ext_resource type="Texture2D" uid="uid://w6ay8ulf658i" path="res://scene/flappy_bird/asset/bg_day.png" id="5_8k2kc"]
[ext_resource type="Texture2D" uid="uid://boipcqlgucns7" path="res://scene/flappy_bird/asset/land.png" id="6_wtytt"]
[ext_resource type="Script" path="res://natural_stage/natural_stage.gd" id="9_2dlmh"]

[sub_resource type="Shader" id="Shader_t1qf5"]
code = "shader_type canvas_item;

uniform float time_scale = 1.0;

uniform vec2 uv = vec2(1.0);

void vertex() {
	UV *= uv;
	UV.x += mod(TIME * time_scale,1.0);
}

void fragment() {
}

void light() {
	// Called for every pixel for every light affecting the CanvasItem.
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h0x6a"]
shader = SubResource("Shader_t1qf5")
shader_parameter/time_scale = 0.05
shader_parameter/uv = Vector2(3.5, 1)

[sub_resource type="Shader" id="Shader_ncj6q"]
code = "shader_type canvas_item;

uniform float time_scale = 1.0;

uniform vec2 uv = vec2(1.0);

void vertex() {
	UV *= uv;
	UV.x += mod(TIME * time_scale,1.0);
}

void fragment() {
}

void light() {
	// Called for every pixel for every light affecting the CanvasItem.
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ykvk"]
shader = SubResource("Shader_ncj6q")
shader_parameter/time_scale = 0.15
shader_parameter/uv = Vector2(3.5, 1)

[node name="Game" type="Node2D"]
texture_filter = 1
script = ExtResource("1_y1a7j")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_h0x6a")
position = Vector2(576, 324)
scale = Vector2(4, 1.26563)
texture = ExtResource("5_8k2kc")

[node name="Ground" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true

[node name="Land" type="Sprite2D" parent="Ground"]
texture_repeat = 2
material = SubResource("ShaderMaterial_0ykvk")
position = Vector2(576, 590.5)
scale = Vector2(3.42857, 1.02679)
texture = ExtResource("6_wtytt")

[node name="Land2" type="Sprite2D" parent="Ground"]
texture_repeat = 2
material = SubResource("ShaderMaterial_0ykvk")
position = Vector2(576, 57)
scale = Vector2(3.42857, 1.02679)
texture = ExtResource("6_wtytt")
flip_v = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground"]
position = Vector2(576, 590.5)
scale = Vector2(3.42857, 1.02679)
polygon = PackedVector2Array(168, 56, -168, 56, -168, -56, 168, -56)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Ground"]
position = Vector2(576, 57)
scale = Vector2(3.42857, 1.02679)
polygon = PackedVector2Array(168, -57, -168, -57, -168, 55, 168, 55)

[node name="PipelineSpawn" type="Marker2D" parent="."]
position = Vector2(1152, 333)

[node name="BirdSpawn" type="Marker2D" parent="."]
position = Vector2(118, 333)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Stage" type="Node" parent="."]
script = ExtResource("9_2dlmh")
gene_size = 16
gene_range = Vector2(-32, 32)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
